force-app/main/default/objects/User/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>