force-app/main/default/objects/User/fields/testF__c.field-meta.xml
<CustomField>
    <fullName>testF__c</fullName>
    <label>testF</label>
    <length>22</length>
    <type>Text</type>
</CustomField>