force-app/main/default/objects/User/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>